--- a/custom_components/versatile_thermostat/translations/pl.json
+++ b/custom_components/versatile_thermostat/translations/pl.json
@@ -238,11 +238,13 @@
         "description": "Wprowadź polecenia załączające i wyłączające kocioł centralny. Polecenia muszą mieć następujący format: `id_encji/nazwa_polecenia[/atrybut:wartość]` (/atrybut:wartość jest opcjonalny)\nNa przykład:\n- aby załączyć przełącznik: `switch.sterownik_pieca/switch.turn_on`\n- aby wyłączyć przełącznik: `switch.sterownik_pieca/switch.turn_off`\n- aby zaprogramować temperaturę kotła na 25° i tym samym wymusić jego zapłon: `climate.termostat_pieca/climate.set_temperature/temperature:25`\n- aby ustawić temperaturę kotła na 10° i tym samym wymusić jego wygaszenie: `climate.termostat_pieca/climate.set_temperature/temperature:10`&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-central-boiler.md)",
         "data": {
           "central_boiler_activation_service": "Polecenie załączenia",
-          "central_boiler_deactivation_service": "Polecenie wyłączenia"
+          "central_boiler_deactivation_service": "Polecenie wyłączenia",
+          "central_boiler_activation_delay_sec": "Opóźnienie załączenia (w sekundach)"
         },
         "data_description": {
           "central_boiler_activation_service": "Polecenie załączenia kotła centralnego w formacie: id_encji/nazwa_polecenia[/atrybut:wartość]",
-          "central_boiler_deactivation_service": "Polecenie wyłączenia kotła centralnego w formacie: id_encji/nazwa_polecenia[/atrybut:wartość]"
+          "central_boiler_deactivation_service": "Polecenie wyłączenia kotła centralnego w formacie: id_encji/nazwa_polecenia[/atrybut:wartość]",
+          "central_boiler_activation_delay_sec": "Opóźnienie (w sekundach) przed załączeniem kotła centralnego po tym, jak VTherm zażądał włączenia"
         }
       },
       "valve_regulation": {
@@ -253,9 +255,9 @@
           "opening_degree_entity_ids": "Encje stopnia otwarcia",
           "closing_degree_entity_ids": "Encje stopnia zamknięcia",
           "proportional_function": "Algorytm",
-          "opening_threshold_degree": "Próg otwarcia zaworu",          
+          "opening_threshold_degree": "Próg otwarcia zaworu",
           "min_opening_degrees": "Minimalny stopień otwarcia",
-          "max_closing_degree": "Maksymalny stopień zamknięcia"          
+          "max_closing_degree": "Maksymalny stopień zamknięcia"
         },
         "data_description": {
           "offset_calibration_entity_ids": "Lista encji kalibracji. Ustaw, jeśli zawór wyposażony jest w encję korekty regulacji. Dla każdego termostatu powinna istnieć maksymalnie jedna taka encja",
@@ -333,7 +335,6 @@
           "temperature_sensor_entity_id": "Temperatura pomieszczenia",
           "last_seen_temperature_sensor_entity_id": "Czas ostatniego odczytu temperatury pomieszczenia",
           "external_temperature_sensor_entity_id": "Identyfikator encji sensora temperatury zewnętrznej",
-
           "cycle_min": "Czas trwania cyklu (w min.)",
           "temp_min": "Minimalna dopuszczalna temperatura",
           "temp_max": "Maksymalna dopuszczalna temperatura",
@@ -358,7 +359,8 @@
           "use_power_feature": "Użyj zarządzania energią",
           "use_presence_feature": "Użyj detekcji obecności",
           "use_central_boiler_feature": "Użyj kotła centralnego. Zaznacz, aby dodać sterowanie kotłem centralnym. Po zaznaczeniu tej opcji musisz skonfigurować termostat sterujący kotłem centralnym. Jeśli któryś z termostatów będzie wymagał ogrzewania, kocioł się załączy. Jeśli żaden termostat nie będzie wymagał ogrzewania, kocioł pozostanie wyłączony. Polecenia załączenia i wyłączenia kotła centralnego są podane na odpowiedniej stronie konfiguracyjnej",
-          "use_auto_start_stop_feature": "Użyj funkcji autoSTART i autoSTOP"        }
+          "use_auto_start_stop_feature": "Użyj funkcji autoSTART i autoSTOP"
+        }
       },
       "type": {
         "title": "Encje - {name}",
@@ -391,14 +393,15 @@
           "inverse_switch_command": "W przypadku przełącznika z przewodem sterującym może być konieczna odwrotna kolejność polecenia",
           "auto_fan_mode": "Automatycznie aktywuj wentylator, gdy konieczne jest intensywne ogrzewanie/chłodzenie",
           "on_command_text": "W przypadku typu `select` lub `climate` należy dostosować polecenia."
-        }      },
+        }
+      },
       "tpi": {
         "title": "TPI - {name}",
         "description": "Atrybuty TPI&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/algorithms.md#lalgorithme-tpi)",
         "data": {
           "tpi_coef_int": "Delta temperatury wewnętrznej",
           "tpi_coef_ext": "Delta temperatury zewnętrznej",
-         "tpi_threshold_low": "Niski próg TPI",
+          "tpi_threshold_low": "Niski próg TPI",
           "tpi_threshold_high": "Wysoki próg TPI",
           "use_tpi_central_config": "Użyj centralnej konfiguracji TPI",
           "minimal_activation_delay": "Minimalna zwłoka czasowa aktywacji",
@@ -412,7 +415,8 @@
           "use_tpi_central_config": "Zaznacz, aby używać centralnej konfiguracji TPI. Odznacz, aby używać konfiguracji TPI dedykowanej wyłącznie dla tego termostatu",
           "minimal_activation_delay": "Zwłoka (w sek.), w czasie której urządzenie nie zostanie aktywowane",
           "minimal_deactivation_delay": "Zwłoka (w sek.), w czasie której urządzenie będzie utrzymywane w stanie gotowości"
-        }      },
+        }
+      },
       "presets": {
         "title": "Presety - {name}",
         "description": "Wybierz, jeśli termostat ma używać presetów podstawowych - wyłącz wybór, jeśli termostat ma używać swoich własnych presetów&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-presets.md)",
@@ -424,7 +428,7 @@
         "title": "Okno - {name}",
         "description": "Zarządzanie otwarciem okna.\nMożesz także skonfigurować automatyczną detekcję otwarcia okna w oparciu o spadek temperatury&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-window.md)",
         "data": {
-         "window_sensor_entity_id": "Identyfikator encji sensora otwarcia okna",
+          "window_sensor_entity_id": "Identyfikator encji sensora otwarcia okna",
           "window_delay": "Zwłoka otwarcia okna (w sek.)",
           "window_off_delay": "Zwłoka zamknięcia okna (w sek.)",
           "window_auto_open_threshold": "Próg spadku temperatury dla automatycznej detekcji otwarcia okna (w °/godz.)",
@@ -442,7 +446,8 @@
           "window_auto_max_duration": "Zalecana wartość: 60 (jedna godzina). Pozostaw puste, jeśli automatyczna detekcja otwarcia okna nie jest używana",
           "use_window_central_config": "Wybierz, aby użyć centralnej konfiguracji okna. Wyłącz wybór, aby użyć konfiguracji okna dedykowanej dla tego termostatu",
           "window_action": "Akcja do wykonania, gdy wykryte zostanie otwarte okno"
-        }      },
+        }
+      },
       "motion": {
         "title": "Ruch - {name}",
         "description": "Zarządzanie sensorem ruchu. Presety mogą przełączać się automatycznie w zależności od wykrycia ruchu. Parametry `preset ruchu` i `preset braku ruchu` powinny być ustawione jako odpowiednie presety. &nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-motion.md)",
@@ -461,7 +466,8 @@
           "motion_preset": "Preset, gdy wykryto ruch",
           "no_motion_preset": "Preset, gdy brak wykrycia ruchu",
           "use_motion_central_config": "Wybierz, aby użyć centralnej konfiguracji ruchu. Wyłącz wybór, aby użyć konfiguracji ruchu dedykowanej dla tego termostatu"
-        }      },
+        }
+      },
       "power": {
         "title": "Energia - {name}",
         "description": "Atrybuty zarządzania energią.\nWskazują moc i maksymalną moc sensora.\nOkreślają pobór mocy grzejnika, gdy jest włączony.\nWszystkie sensory i urządzenia powinny mieć tę samą jednostkę mocy (kW lub W)&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-power.md)",
@@ -476,7 +482,7 @@
           "max_power_sensor_entity_id": "Identyfikator encji sensora energii maksymalnej",
           "power_temp": "Temperatura progowa redukująca zużycie energii",
           "use_power_central_config": "Wybierz, aby użyć centralnej konfiguracji energii. Wyłącz wybór, aby użyć konfiguracji energii dedykowanej dla tego termostatu"
-        }      
+        }
       },
       "presence": {
         "title": "Obecność - {name}",
@@ -501,7 +507,6 @@
           "use_advanced_central_config": "Użyj zaawansowanej konfiguracji centralnej"
         },
         "data_description": {
-
           "minimal_activation_delay": "Zwłoka (w sek.), w czasie której urządzenie nie zostanie aktywowane",
           "minimal_deactivation_delay": "Zwłoka (w sek.), w czasie której urządzenie będzie utrzymywane w stanie gotowości",
           "safety_delay_min": "Maksymalna dopuszczalna zwłoka (w min.) między dwoma pomiarami temperatury. Powyżej tej zwłoki termostat przełączy się w stan wyłączenia trybu bezpiecznego.",
@@ -515,11 +520,13 @@
         "description": "Wprowadź polecenia załączające i wyłączające kocioł centralny. Polecenia muszą mieć następujacy format: `id_encji/nazwa_polecenia[/atrybut:wartość]` (/atrybut:wartość jest opcjonalny)\nNa przykład:\n- aby załączyć przełącznik: `switch.sterownik_pieca/switch.turn_on`\n- aby wyłączyć przełącznik: `switch.sterownik_pieca/switch.turn_off`\n- aby zaprogramować temperaturę kotła na 25° i w ten sposób wymusić jego zapłon: `climate.termostat_pieca/climate.set_temperature/temperature:25`\n- aby ustawić temperaturę kotła na 10° i w ten sposób wymusić jego wygaszenie: `climate.termostat_pieca/climate.set_temperature/temperature:10`&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/pl/feature-central-boiler.md)",
         "data": {
           "central_boiler_activation_service": "Polecenie załączenia",
-          "central_boiler_deactivation_service": "Polecenie wyłączenia"
+          "central_boiler_deactivation_service": "Polecenie wyłączenia",
+          "central_boiler_activation_delay_sec": "Opóźnienie załączenia (w sekundach)"
         },
         "data_description": {
           "central_boiler_activation_service": "Polecenie załączenia kotła centralnego w formacie: `id_encji/nazwa_polecenia[/atrybut:wartość]`",
-          "central_boiler_deactivation_service": "Polecenie wyłączenia kotła centralnego w formacie: `id_encji/nazwa_polecenia[/atrybut:wartość]`"
+          "central_boiler_deactivation_service": "Polecenie wyłączenia kotła centralnego w formacie: `id_encji/nazwa_polecenia[/atrybut:wartość]`",
+          "central_boiler_activation_delay_sec": "Opóźnienie (w sekundach) przed załączeniem kotła centralnego po tym, jak VTherm zażądał włączenia"
         }
       },
       "valve_regulation": {
